k8s/ingress/ingress-tls-k8s-latest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - acb9635f7cc9f4487991d5cb6b990534-1419316315.ap-northeast-2.elb.amazonaws.com
    secretName: tls-secret
  rules:
  - host: acb9635f7cc9f4487991d5cb6b990534-1419316315.ap-northeast-2.elb.amazonaws.com
    http:
      paths:
      - path: /echo-hostname
        pathType: Prefix
        backend:
          service:
            name: hostname-service
            port:
              number: 80
